--- a/src/styles.css
+++ b/src/styles.css
@@ -144,7 +144,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  height: 6.75rem;
+  height: auto;
 }
 
 .guess-input-wrapper label {
@@ -194,6 +194,71 @@ h1 {
   margin: -1px;
   padding: 0;
   border: 0;
+}
+
+.btn{
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  border: 2px solid var(--color-gray-700);
+  background: var(--color-gray-300);
+  border-color: var(--color-gray-300);
+  color: white;
+  border-radius: 4px;
+  padding: 4px 8px;
+  margin: 4px;
+}
+
+.game-input-keyboard{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
+  padding: 8px 4px;
+}
+
+.game-input-keyboard .keyboard-row{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
+}
+
+.game-input-keyboard .keyboard-char{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid var(--color-gray-700);
+  background: var(--color-gray-700);
+  border-color: var(--color-gray-700);
+  border-radius: 4px;
+  min-width: 34px;
+  padding: 4px 8px;
+}
+
+.game-input-keyboard .keyboard-char:disabled{
+  opacity: 0.4;
+  cursor: not-allowed;
+}
+
+.game-input-keyboard .keyboard-char.correct {
+  background: var(--color-success);
+  border-color: var(--color-success);
+  color: white;
+}
+.game-input-keyboard .keyboard-char.incorrect {
+  background: var(--color-gray-300);
+  border-color: var(--color-gray-300);
+  color: white;
+}
+.game-input-keyboard .keyboard-char.misplaced {
+  background: var(--color-warning);
+  border-color: var(--color-warning);
+  color: white;
 }
 
 /*
